--- a/style.css
+++ b/style.css
@@ -175,7 +175,7 @@ dl, dt, dd, ol, ul, li {
 body {
 	line-height: 1.5;
 	color: #555;
-	font-family: 'Zen Kaku Gothic New', sans-serif;
+	 @font-face { font-family: Brown-font ; src: url("fonts/TTF/Brown-Regular.ttf"); } 
 }
 
 a {
@@ -203,25 +203,32 @@ iframe {
 
 h1,{
 	color: #444;
-	font-weight: 300;
+	font-weight: 600;
 	line-height: 1.5;
 	margin: 0 0 0px 0;
-	font-family: 'Zen Kaku Gothic New', sans-serif;
+    font-family: Brown-font, sans-serif;
+
 }
 h2 {
+	color: #444;
+	font-weight: 400;
+	line-height: 1.5;
+	margin: 0 0 0 0;
+	font-family: Brown-font, sans-serif;
+}
+h3 {
 	color: #444;
 	font-weight: 300;
 	line-height: 1.5;
 	margin: 0 0 0 0;
-	font-family: 'Zen Kaku Gothic New', sans-serif;
+	font-family: Brown-font, sans-serif;
 }
-h3,
 h4 {
 	color: #444;
 	font-weight: 300;
 	line-height: 1.5;
 	margin: 0 0 0 0;
-	font-family: 'Zen Kaku Gothic New', sans-serif;
+	font-family: Brown-font, sans-serif;
 }
 h5,
 h6 {
@@ -229,19 +236,19 @@ h6 {
 	font-weight: 300;
 	line-height: 1.5;
 	margin: 0 0 0 0;
-	font-family: 'Zen Kaku Gothic New', sans-serif;
+	font-family: Brown-font, sans-serif;
 }
 
 h5,
 h6 { margin-bottom: 20px; }
 
-h1 { font-size: 36px; }
+h1 { font-size: 4rem; }
 
-h2 { font-size: 30px; }
+h2 { font-size: 2rem; }
 
 h3 { font-size: 1.5rem; }
 
-h4 { font-size: 18px; }
+h4 { font-size: 1rem; }
 
 h5 { font-size: 0.875rem; }
 
@@ -291,7 +298,7 @@ table,
 fieldset,
 form { margin-bottom: 30px; }
 
-small {font-family: 'Zen Kaku Gothic New', sans-serif;}
+small {font-family: Brown-font , sans-serif;}
 
 
 @media (max-width: 1200px) {
@@ -440,11 +447,11 @@ span.middot {
 
 .nolineheight { line-height: 0 !important; }
 
-.font-body { font-family: 'Zen Kaku Gothic New', sans-serif; }
+.font-body { font-family: Brown-font , sans-serif;}
 
-.font-primary { font-family: 'Zen Kaku Gothic New', sans-serif; }
+.font-primary { font-family: Brown-font , sans-serif;}
 
-.font-secondary { font-family: 'Zen Kaku Gothic New', sans-serif; }
+.font-secondary { font-family: Brown-font , sans-serif;}
 
 .fw-extralight {
 	font-weight: 300 !important;
@@ -3645,7 +3652,7 @@ body:not(.top-search-open) .top-search-parent #primary-menu-trigger {
 	font-size: 1.25rem;
 	letter-spacing: 1px;
 	text-transform: lowercase;
-	font-family: 'Zen Kaku Gothic New', sans-serif;
+	font-family: font-family: Brown-font, sans-serif;
 }
 
 .menu-link span {
@@ -3689,7 +3696,7 @@ body:not(.top-search-open) .top-search-parent #primary-menu-trigger {
 	font-weight: 400;
 	color: #666;
 	letter-spacing: 0;
-	font-family: 'Zen Kaku Gothic New', sans-serif;
+	font-family: font-family: Brown-font, sans-serif;
 }
 
 .sub-menu-container .menu-item:hover > .menu-link {
@@ -13644,7 +13651,7 @@ h3.titular-title { font-size: 2rem; }
 .emphasis-title h2 {
 	margin-bottom: 0;
 	font-weight: 700;
-	text-transform: uppercase;
+	text-transform: lowercase;
 	letter-spacing: 1px;
 	color: #333;
 }
@@ -14801,7 +14808,7 @@ body:not(.device-touch) .tagcloud a {
 	font-size: 13px;
 	font-weight: 700;
 	letter-spacing: 2px;
-	font-family: 'Poppins', sans-serif;
+	font-family: Brown-font , sans-serif;
 }
 
 .nav-tree li i {
